--- a/public/index.html
+++ b/public/index.html
@@ -365,6 +365,8 @@
                 <p>&copy; 2026 JurisAI Pro. All rights reserved.</p>
                 <p class="footer-disclaimer">⚠️ AI outputs are for informational purposes only and do not constitute
                     legal advice. Always consult a qualified attorney for legal matters.</p>
+                <p style="margin-top: 0.5rem; color: var(--text-secondary); font-size: 0.85rem;">Developed by Piyush
+                    Singh</p>
             </div>
         </div>
     </footer>
