feat: upgrade AI to gpt-4o with 10-section legal report system prompt, full markdown renderer, and improved PDF export

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                         <label for="caseDetails" style="font-size: 0.9rem; font-weight: 500; color: #d4a853;">1. Case
                             Details & Information (Required)</label>
                         <textarea id="caseDetails" rows="3"
-                            style="width: 100%; box-sizing: border-box; background: rgba(0,0,0,0.4); border: 1px solid rgba(255,255,255,0.15); border-radius: 8px; color: #fff; padding: 1rem; resize: vertical; font-family: inherit; font-size: 0.95rem; transition: border-color 0.2s;"
+                            style="width: 100%; box-sizing: border-box; background: rgba(255, 255, 255, 0.9); border: 1px solid rgba(0, 0, 0, 0.2); border-radius: 8px; color: #1a1a1a; padding: 1rem; resize: vertical; font-family: inherit; font-size: 0.95rem; transition: border-color 0.2s;"
                             placeholder="Paste all case facts, background information, or document text here..."></textarea>
                     </div>
 
@@ -241,7 +241,7 @@
                                 style="font-size: 0.9rem; font-weight: 500; color: var(--text-secondary);">2. Specific
                                 Question (Optional)</label>
                             <textarea id="chatInput" rows="2"
-                                style="width: 100%; box-sizing: border-box; background: rgba(0,0,0,0.4); border: 1px solid rgba(255,255,255,0.15); border-radius: 8px; color: #fff; padding: 1rem; resize: vertical; font-family: inherit; font-size: 0.95rem; transition: border-color 0.2s;"
+                                style="width: 100%; box-sizing: border-box; background: rgba(255, 255, 255, 0.9); border: 1px solid rgba(0, 0, 0, 0.2); border-radius: 8px; color: #1a1a1a; padding: 1rem; resize: vertical; font-family: inherit; font-size: 0.95rem; transition: border-color 0.2s;"
                                 placeholder="Ask any specific question related to your case details..."></textarea>
                         </div>
                         <button id="chatSendBtn" class="btn btn-primary"
